# welds

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  todo.md
src/: lib.rs  (+2 more)
testlib/: Cargo.toml  build.rs
testlib/databases/postgres/: 01_create_tables.sql  02_add_test_data.sql  Dockerfile
testlib/src/: lib.rs  postgres.rs
tests/: Cargo.toml  README.md
tests/mssql/: Cargo.toml  README.md  notes.txt  welds.yaml
tests/mssql/src/models/: binary.rs  mod.rs
tests/mssql/tests/: all_tests.rs  basic_sqlx_tests.rs  connection.rs  product_lite_selects.rs  product_selects.rs
tests/mssql/tests/binary/: mod.rs
tests/mssql/tests/extra_types/: mod.rs
tests/mssql/tests/group_by/: mod.rs
tests/mssql/tests/migrations/: mod.rs
tests/mssql/tests/streams/: mod.rs
tests/mysql/: Cargo.toml
tests/mysql/src/models/: mod.rs
tests/mysql/tests/: all_tests.rs
tests/mysql/tests/extra_types/: mod.rs
tests/mysql/tests/group_by/: mod.rs
tests/mysql/tests/migrations/: mod.rs
tests/mysql/tests/streams/: mod.rs
tests/postgres/: 01_create_tables.sql  Cargo.toml  Dockerfile  welds.yaml
tests/postgres/src/models/: mod.rs
tests/postgres/tests/: all_tests.rs  product_insert.rs  product_selects.rs  product_update.rs
tests/postgres/tests/group_by/: mod.rs
tests/postgres/tests/migrations/: mod.rs
tests/postgres/tests/streams/: mod.rs
tests/sqlite/: Cargo.toml
tests/sqlite/src/models/: mod.rs
tests/sqlite/tests/: all_tests.rs
tests/sqlite/tests/bulk_delete/: mod.rs
tests/sqlite/tests/bulk_update/: mod.rs
tests/sqlite/tests/callbacks/: mod.rs
tests/sqlite/tests/extra_types/: mod.rs
tests/sqlite/tests/group_by/: mod.rs
tests/sqlite/tests/ignores/: mod.rs
tests/sqlite/tests/includes/: mod.rs
tests/sqlite/tests/migrations/: mod.rs
tests/sqlite/tests/select_col/: mod.rs
tests/sqlite/tests/streams/: mod.rs
tests/sqlite/tests/sub_query_tests/: mod.rs
tests/sqlite_sync/: Cargo.toml
tests/sqlite_sync/tests/: all_tests.rs
tests/sqlite_sync/tests/bulk_delete/: mod.rs
tests/sqlite_sync/tests/bulk_update/: mod.rs
tests/sqlite_sync/tests/callbacks/: mod.rs
tests/sqlite_sync/tests/extra_types/: mod.rs
tests/testlib/: Cargo.toml  README.md  build.rs
tests/testlib/src/: lib.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
welds/: Cargo.toml  README.md
welds-cli/: Cargo.toml  README.md
welds-cli/examples/postgres/: Cargo.toml  welds.yaml
welds-cli/examples/sqlite/: Cargo.toml  sample_db.sqlite  welds.yaml
welds-cli/examples/sqlite_curd/: README.md  test.sqlite
welds-cli/src/: lib.rs
welds-cli/src/adapters/: mod.rs  sqlite.rs
welds-cli/src/commands/: mod.rs
welds-cli/src/config/: column.rs  mod.rs  table.rs
welds-cli/src/errors/: mod.rs
welds-cli/src/generators/: db_type_lookup.rs  mod.rs
welds-cli/src/schema/: mod.rs
welds-connections/: .gitignore  Cargo.toml  README.md
welds-connections/examples/: crud.rs
welds-connections/src/: lib.rs  trace.rs  transaction.rs
welds-connections/src/any/: mod.rs
welds-connections/src/errors/: mod.rs
welds-connections/src/mssql/: mod.rs  row_stream.rs  transaction.rs
welds-connections/src/mysql/: mod.rs  row_stream.rs
welds-connections/src/noop/: mod.rs
welds-connections/src/params/: gen.rb  mod.rs
welds-connections/src/postgres/: mod.rs  row_stream.rs
welds-connections/src/row/: gen.rb  mod.rs  mssql_row_wrapper.rs  row_gen.rs
welds-connections/src/sqlite/: mod.rs  row_stream.rs
welds-connections/src/sqlite_sync/: mod.rs
welds-connections/src/transaction/: mod.rs
welds-core/: Cargo.toml
welds-core/src/: errors.rs  lib.rs  row.rs  state.rs
welds-core/src/database/: mod.rs
welds-core/src/query/: generic_query_builder.rs  mod.rs  select.rs
welds-core/src/relations/: mod.rs
welds-core/src/table/: col_writer.rs  mod.rs
welds-core/src/writers/: column.rs  count.rs  insert.rs  limit_skip.rs  mod.rs
welds-core/tests/: orders_crud.rs  product_selects.rs
welds-macros/: Cargo.toml  README.md
welds-macros/src/: attributes.rs  column.rs  engine.rs  errors.rs  hook.rs  info.rs  lib.rs  relation.rs  utils.rs
welds-macros/src/blocks/: define_schema.rs  foreign_key_partial_eq.rs  has_schema.rs  jointable.rs  mod.rs  pk_value.rs  relations.rs  table_columns.rs  table_info.rs  try_from_row.rs  unique_identifier.rs  update_from_row.rs  write_bulk_array_to_args.rs  write_col_default_check.rs  write_hooks.rs  write_primary_key_value.rs  write_to_args.rs
welds-macros/src/relation/: basic.rs  jointable.rs  manual.rs  mod.rs
welds/examples/: aggregating.rs  any_db_compiletime.rs  any_db_runtime.rs  bulk_operations.rs  crud.rs  group_by.rs  hooks.rs  includes.rs  manual_select_columns.rs  migrations.rs  scopes.rs  transactions.rs  verify_tables.rs
welds/examples.old/: any_db_runtime.rs  crud.rs  custom_database_types.rs  manual_select_columns.rs  verify_tables.rs
welds/src/: alias.rs  errors.rs  example_objects.rs  exts.rs  helpers.rs  lib.rs  prelude.rs  state.rs
welds/src/check/: issue.rs  mod.rs
welds/src/connection/: any.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs  transaction.rs
welds/src/database/: pool.rs
welds/src/dataset/: mod.rs  tests.rs
welds/src/detect/: fk_scan_row.rs  mod.rs  table_def.rs  table_scan_row.rs
welds/src/errors/: mod.rs
welds/src/migrations/: manual.rs  mod.rs  prelude.rs  steps.rs  types.rs  utils.rs
welds/src/model_traits/: hooks.rs  mod.rs  tableident.rs  tests.rs
welds/src/query/: helpers.rs  link.rs  mod.rs  optional.rs  tail.rs
welds/src/relations/: belongsto.rs  belongstoone.rs  hasmany.rs  hasone.rs  manual.rs  mod.rs
welds/src/table/: mod.rs
welds/src/writers/: column.rs  count.rs  insert.rs  limit_skip.rs  mod.rs  nextparam.rs  table.rs  types.rs
welds/src_old/: alias.rs  example_objects.rs  lib.rs  state.rs
welds/src_old/check/: issue.rs  mod.rs
welds/src_old/connection/: database.rs  mssql.rs  mysql.rs  postgres.rs  transaction.rs
welds/src_old/detect/: mod.rs  table_def.rs
welds/src_old/query/: tail.rs
welds/src_old/table/: mod.rs
welds/src_old/writers/: count.rs  insert.rs
(+207 files in other folders)
