[package]
name = "welds"
version = "0.1.0"
edition = "2021"

[lib]
name = "weldslib"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = [ "attributes" ] }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "all", "postgres", "mysql", "mssql", "sqlite" ] }
clap = { version = "4.0", features = [ "derive"] }
serde = { version="1", features = ["derive"] }
serde_yaml = "0.9"
quote = "1"
