[package]
name = "testlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_init = { version="1"}
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.6", features = [
  "runtime-async-std-rustls",
  "all",
  "postgres",
  "mysql",
  "mssql",
  "sqlite",
  "macros",
] }
