[workspace]



default-members = ["testlib", "sqlite", "mysql"]
members = ["testlib", "sqlite", "mysql"]
#default-members = ["mssql", "mysql", "postgres", "testlib", "sqlite"]
#members = ["mssql", "mysql", "postgres", "testlib", "sqlite"]

workspace.resolver = "2"

[profile.dev.package.sqlx-macros]
opt-level = 3
