[package]
name = "welds-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "weldscli_lib"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls",  "macros"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
quote = "1"
Inflector = "0.11"
rust-format = "0.3"
anyhow = "1.0"
futures = "0.3.25"

welds = { path = "../welds", version = '0.1.0', features=["postgres", "mssql", "mysql", "sqlite"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
