[package]
name = "welds-cli"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
categories = ["Database interfaces", "database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
repository = "https://github.com/weldsorm/welds/tree/main/welds-cli"
description = "An async ORM for (postgres, mssql, mysql, sqlite)"

[lib]
name = "weldscli_lib"
path = "src/lib.rs"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls",  "macros"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
quote = "^1.0.2"
proc-macro2 = "1"
Inflector = "0.11"
rust-format = "0.3"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
welds = { path = "../welds", version = '0.3.0', features=["full"] }
syn = "2.0.52"


[profile.dev.package.sqlx-macros]
opt-level = 3
