[package]
name = "welds-connections"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.4.14"
edition = "2021"
license = "BSD-3-Clause"
categories = ["database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
repository = "https://github.com/weldsorm/welds"
description = "An async ORM for (postgres, mssql, mysql, sqlite)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
"default" = []
"postgres" = ["sqlx/postgres"]
"mysql" = ["sqlx/mysql"]
"sqlite" = ["sqlx/sqlite"]
"mssql" = ["tokio", "tokio-util", "futures-util", "tiberius", "bb8-tiberius", "bb8", "futures", "async-mutex"]
"mssql-chrono" = ["tiberius/chrono"]
"mssql-time" = ["tiberius/time"]
"mssql-rust_decimal" = ["tiberius/rust_decimal"]
"mssql-bigdecimal" = ["tiberius/bigdecimal"]
"noop" = []
"tracing" = ["dep:tracing"]
"full" = ["postgres", "mysql", "sqlite", "mssql", "noop"]


[dependencies]
async-trait = "0.1"
bb8 = { version="0.9", optional=true }
bb8-tiberius = { version="0.16", optional=true }
tiberius = { version = "0.12", features = ["tokio"], optional = true }
futures = {version= "0.3", optional=true }
futures-util = { version= "0.3", optional=true }
log = "0.4"
sqlx = { version = "0.8", features = [], optional = true }
thiserror = "1.0.57"
tracing = { version = "0.1", optional = true }
tokio = { version = "1", features = [], optional = true }
tokio-util = { version = "0.7", features = ["full"], optional = true }
async-mutex = { version = "1.4", optional = true }

[dev-dependencies]
welds-connections = { path="./", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"

[package.metadata.docs.rs]
all-features = true
