[package]
name = "welds-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [
  "all",
  "postgres",
  "mysql",
  "mssql",
  "sqlite",
  "macros",
] }

[profile.dev.package.sqlx-macros]
opt-level = 3


[dev-dependencies]
testlib = { path = "../testlib" }
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.6", features = [
  "runtime-async-std-rustls",
  "all",
  "postgres",
  "mysql",
  "mssql",
  "sqlite",
  "macros",
] }
