[package]
name = "welds-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [
  "macros",
] }

[features]
#"default" = ["postgres", "mysql", "mssql", "sqlite"]
"default" = []
"postgres" = ["sqlx/postgres"]
"mysql" = ["sqlx/mysql"]
"mssql" = ["sqlx/mssql"]
"sqlite" = ["sqlx/sqlite"]


[profile.dev.package.sqlx-macros]
opt-level = 3


[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls",  "macros"] }
#"welds-core" = { path='./', features=["postgres", "mysql", "mssql", "sqlite"]}


