[package]
name = "welds-macros"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.4.14"
edition = "2021"
license = "BSD-3-Clause"
categories = ["database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
repository = "https://github.com/weldsorm/welds"
description = "Macros for the welds ORM"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["extra-traits"] }
log = "^0.4"
quote = "^1.0"
proc-macro2 = "1"

[features]
"default" = []
