[package]
name = "welds-macros"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.4.21"
edition = "2024"
license = "BSD-3-Clause"
categories = ["database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
repository = "https://github.com/weldsorm/welds"
description = "Macros for the welds ORM"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = ["extra-traits", "full"] }
quote = "^1.0"
proc-macro2 = "1"

[features]
"default" = []

# Internal feature for enabling sync compilation
"__sync" = []
