[package]
name = "welds"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.4.14"
edition = "2021"
license = "BSD-3-Clause"
categories = ["database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
repository = "https://github.com/weldsorm/welds"
description = "An async ORM for (postgres, mssql, mysql, sqlite)"

[dependencies]
welds-connections = { path="../welds-connections", version = "^0.4.14" }
async-trait = "0.1"
log = "0.4"
colored = { version="2", optional = true }
anyhow = "1.0"
thiserror = "1.0"
welds-macros = { path="../welds-macros", version = "^0.4.14" }

[features]
"default" = []
"postgres" = ["welds-connections/postgres"]
"mysql" = ["welds-connections/mysql"]
"mssql" = ["welds-connections/mssql"]
"sqlite" = ["welds-connections/sqlite"]
"full" = ["postgres", "mysql", "mssql", "sqlite", "check", "detect", "migrations" ]
"detect" = []
"mock" = []
"check" = ["detect", "colored"]
"migrations" = ["detect"]
"tracing" = ["welds-connections/tracing"]


#[profile.dev.package.sqlx-macros]
#opt-level = 3


[dev-dependencies]
welds = { path="./", features=["full", "mock"] }
futures = {version= "0.3" }
welds-connections = { path="../welds-connections", version = "^0.4.14", features=["full"] }
welds-macros = { path="../welds-macros", version = "^0.4.14" }
# used for the examples
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-rustls", "macros"] }
async-std = { version = "1", features = ["attributes"] }
pretty_env_logger = "0.5"
