[package]
name = "welds"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.4.19"
edition = "2024"
license = "BSD-3-Clause"
categories = ["database"]
keywords = ["orm", "postgres", "mssql", "mysql", "sqlite"]
readme = "README.md"
repository = "https://github.com/weldsorm/welds"
description = "An async ORM for (postgres, mssql, mysql, sqlite)"

[dependencies]
welds-connections = { path="../welds-connections", version = "^0.4.19" }
futures = {version= "0.3", optional = true  }
futures-core = {version= "0.3", optional=true }
async-trait = "0.1"
colored = { version="3", optional = true }
anyhow = "1.0"
thiserror = "2.0"
welds-macros = { path="../welds-macros", version = "^0.4.19" }

[features]
"default" = []
"postgres" = ["welds-connections/postgres"]
"mysql" = ["welds-connections/mysql"]
"mssql" = ["welds-connections/mssql"]
"sqlite" = ["welds-connections/sqlite"]
"full" = ["postgres", "mysql", "mssql", "sqlite", "check", "detect", "migrations", "unstable-api"]
"detect" = []
"mock" = []
"check" = ["detect", "colored"]
"migrations" = ["detect"]
"unstable-api" = ["welds-connections/unstable-api", "futures", "futures-core"]
"tracing" = ["welds-connections/tracing"]


#[profile.dev.package.sqlx-macros]
#opt-level = 3


[dev-dependencies]
welds = { path="./", features=["full", "mock", "unstable-api"] }
futures = {version= "0.3" }
welds-connections = { path="../welds-connections", version = "^0.4.19", features=["full"] }
welds-macros = { path="../welds-macros", version = "^0.4.19" }
# used for the examples
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-rustls", "macros"] }
async-std = { version = "1", features = ["attributes"] }
pretty_env_logger = "0.5"


[package.metadata.docs.rs]
all-features = true
