[package]
name = "mssql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testlib = { path = "../testlib" }
welds = { path = "../../welds", features = [ 'mssql', 'detect', 'check', 'migrations']  }
tokio = { version = "1", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"

