[package]
name = "mssql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
testlib = { path = "../testlib" }
welds-connections = { path = "../../welds-connections", features = [ 'mssql', 'mssql-chrono']  }
welds = { path = "../../welds", features = [ 'mssql', 'detect', 'check', 'migrations', "unstable-api"]  }
tokio = { version = "1", features = ["full"] }
serial_test = "3"
log = "0.4.21"
env_logger = "0.11.3"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.132"
chrono = "0.4.38"
tiberius = { version = "0.12.3", features = ["chrono"] }
futures = "0.3.31"
