[package]
name = "mysql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testlib = { path = "../testlib" }
welds = { path = "../../welds", features = ["mysql"]  }
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls",  "macros"] }
