[package]
name = "mysql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testlib = { path = "../testlib" }
welds = { path = "../../welds", features = ["mysql", "detect", "check", "migrations"]  }
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-rustls", "macros"] }
env_logger = "0.11.2"
log = "0.4.21"
