[package]
name = "postgres_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
testlib = { path = "../testlib" }
welds = { path = "../../welds", features = ["postgres", "detect", 'check']  }
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "macros"] }
