[package]
name = "postgres_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
testlib = { path = "../testlib" }
welds = { path = "../../welds", features = ["postgres", "detect", 'check', "migrations"]  }
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-rustls", "macros", "uuid"] }
log = "0.4.21"
env_logger = "0.11.2"
uuid = { version = "1.10.0", features = ["v4"] }
