[package]
name = "sqlite_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testlib = { path = "../testlib" }
welds = { path = "../../welds", features = ["sqlite", 'detect', 'check', "migrations"]  }
async-std = { version = "1", features = ["attributes"] }
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-rustls", "macros", "chrono", "uuid"] }
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.133"
log = "0.4"
env_logger = "0.11"

