[package]
name = "sqlite_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
welds = { path = "../../welds", features = ["full-sync", "unstable-api"]  }
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.133"
log = "0.4"
env_logger = "0.11"

