[package]
name = "testlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_init = { version="1"}
rand = "0.8"
async-std = { version = "1", features = ["attributes"] }
welds-sqlx-mssql = { path="../../../welds-sqlx-mssql", version = "0.7.0-alpha.3" }
sqlx = { version = "0.7.0-alpha.3", features = [
  "runtime-async-std", "tls-rustls",
  "postgres",
  "mysql",
  "sqlite",
  "macros",
] }
