[package]
name = "testlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_init = { version="1"}
rand = "0.8"
async-std = { version = "1", features = ["attributes"] }
tiberius = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = [], optional = true }
bb8 = { version="0.8" }
bb8-tiberius = { version="0.15"}

sqlx = { version = "0.8", features = [
  "runtime-async-std", "tls-rustls",
  "postgres",
  "mysql",
  "sqlite",
  "macros",
] }
