[package]
name = "sqlite-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "sqlite"
path = "src/main.rs"

[dependencies]
welds-core = { path = "../../../welds-core", version = '0.1.0' }

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros" ] }
log = "0.4"
pretty_env_logger = "0.4"

[workspace]
